# super-auth

./: .dockerignore  .example-env  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  clean.sh  compose.yaml  compose.yml  keycloack.json  package.json  run.sh  tech-presentation.md
.github/workflows/: deploy.yaml
database/: .example-env  Dockerfile
grafana/: .example-env
grafana/dashboards/: dashboards.yml
grafana/dashboards/keycloak/: keycloak-general.json
grafana/datasources/: datasources.yml
keycloak/: .example-env  Dockerfile  import-realm.sh  new-client-initial.json  new-user-initial.json  realm-config-initial.json  realm-mod.json  realm.json  realm.py  start.sh  sub-token.json
nginx/: Dockerfile  import-envs.sh  nginx.conf  site.conf
prometheus/: .example-env  prometheus.yml
web-backend/: .example-env  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  run-pytest.sh
web-backend/app/: main.py
web-backend/app/brokers/: kafka.py  kafka_admin.py  kafka_producer.py
web-backend/app/caches/: keydb.py
web-backend/app/configs/: logging.py  logging_handler.py
web-backend/app/database/: db.py  models.py  repository.py
web-backend/app/database/migrations/: env.py
web-backend/app/database/migrations/versions/: e42eb4f30935_initial_migration.py
web-backend/app/exceptions/: custom_exceptions.py
web-backend/app/middlewares/: logging_middleware.py
web-backend/app/routers/: auth.py  events.py  kafka.py
web-backend/app/schemas/: auth.py  events.py  kafka.py
web-backend/app/services/: keycloak.py
web-backend/app/utils/: handlers.py
web-backend/tests/: conftest.py  data_generating_testing.py  test_auth.py  test_database.py  test_events.py  test_main.py  test_run_auth_in_containers.py  test_run_events_in_containers.py  test_run_kafka_in_containers.py
web-react/: .example-env  .prettierignore  Dockerfile  compose.yml  eslint.config.mjs  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
web-react/public/: index.html
web-react/src/: App.test.js  App.tsx  index.js  index.tsx  serviceWorker.js  serviceWorker.ts  styles.scss
web-react/src/components/: Authentication.tsx  ErrorModal.tsx  KeycloackContext.tsx  Layout.tsx
(+21 files in other folders)
